Game-pad support was improved

--- a/documentation/refrence.html
+++ b/documentation/refrence.html
@@ -152,7 +152,7 @@
         license</a>. </big>
     <h2><a class="mozTocH2" name="mozTocId810132"></a><big>Chapter 3. License</big></h2>
     <big><br style="text-decoration: underline;">
-      <span style="text-decoration: underline;">Blue game development kit
+      <span style="text-decoration: underline;">Eugene game development kit
         license</span><br>
       <br>
       Copyright (C) 2021 Popov Evgeniy Alekseyevich<br>
@@ -334,9 +334,9 @@ C++
     <big> <br>
       <span style="text-decoration: underline;">Render performance</span><br>
       <br>
-      Always use latest video-card drivers. It can increase render
-      performance. Also you can try to change screen resolution if you have
-      low render performance.<br>
+      Always use latest video-card drivers. It can increase render performance.
+      Also you can try to change screen resolution if you have low render
+      performance.<br>
       <br>
       <span style="text-decoration: underline;">Fps limitation</span><br>
       <br>
@@ -511,6 +511,7 @@ C++
         *screen);</span>&nbsp; – Prepare for drawing.<br>
       <span style="font-style: italic;">void Background::set_target(const
         unsigned int target);</span> – Set target frame in scrolling background.<br
+
         style="font-style: italic;">
       <span style="font-style: italic;">void Background::step();</span> –
       Increase number of target frame in scrolling background. Set it to 1 if
@@ -1745,6 +1746,7 @@ Multimedia
       </big></span><span><big>1.6.3 – Filesystem subsystem was improved.<br>
       </big></span><span><big>1.6.4 – 1.6.5 – Small changes.<br>
       </big></span><span><big>1.6.6 – Base graphics subsystem was improved.<br>
-      </big></span><span><big>1.6.7 – Small changes.</big></span><br>
+      </big></span><span><big>1.6.7 – Small changes.<br>
+      </big></span><span><big>1.6.8 – Game-pad support was improved.</big></span><br>
   </body>
 </html>
