--- a/documentation/refrence.html
+++ b/documentation/refrence.html
@@ -511,7 +511,6 @@ C++
         *screen);</span>&nbsp; – Prepare for drawing.<br>
       <span style="font-style: italic;">void Background::set_target(const
         unsigned int target);</span> – Set target frame in scrolling background.<br
-
         style="font-style: italic;">
       <span style="font-style: italic;">void Background::step();</span> –
       Increase number of target frame in scrolling background. Set it to 1 if
@@ -793,7 +792,8 @@ C++
       <br>
     </big>
     <p><big> All loading images must have correct specification. You can load an
-        images from 32 bit </big><big>Truevision TGA pictures.<br>
+        images from 32 bit </big><big><a href="https://en.wikipedia.org/wiki/Truevision_TGA">Truevision
+          TGA</a> pictures.<br>
       </big></p>
     <big> <span style="text-decoration: underline;">Recommend software</span><br>
       <br>
@@ -1747,6 +1747,8 @@ Multimedia
       </big></span><span><big>1.6.4 – 1.6.5 – Small changes.<br>
       </big></span><span><big>1.6.6 – Base graphics subsystem was improved.<br>
       </big></span><span><big>1.6.7 – Small changes.<br>
-      </big></span><span><big>1.6.8 – Game-pad support was improved.</big></span><br>
+      </big></span><span><big>1.6.8 – Game-pad support was improved.<br>
+        1.6.9 – Small changes.<br>
+      </big></span>
   </body>
 </html>
