--- a/documentation/refrence.html
+++ b/documentation/refrence.html
@@ -356,9 +356,10 @@ C++
       <span style="font-style: italic;">void Screen::initialize();</span> –
       Initialize the base graphic subsystem with default screen resolution.<br>
     </big><big><span style="font-style: italic;">void Screen::initialize(const
-        unsigned long int width,</span></big><big><span style="font-style: italic;">const
-        unsigned long int heigt</span></big><big><span style="font-style: italic;">);</span>
+        unsigned int width,</span></big><big><span style="font-style: italic;">const
+        unsigned int heigt</span></big><big><span style="font-style: italic;">);</span>
       – Initialize the base graphic subsystem with custom screen resolution.</big><big><span
+
         style="font-style: italic;"></span><span style="font-style: italic;"></span><br>
       <span style="font-style: italic;">bool Screen::sync();</span> – Show
       current back-buffer content on screen. Return false if a game is
@@ -1748,7 +1749,8 @@ Multimedia
       </big></span><span><big>1.6.6 – Base graphics subsystem was improved.<br>
       </big></span><span><big>1.6.7 – Small changes.<br>
       </big></span><span><big>1.6.8 – Game-pad support was improved.<br>
-        1.6.9 – Small changes.<br>
+        1.6.9 –&nbsp;</big></span><span><big> 1.7 –</big></span><span><big>
+        Small changes.<br>
       </big></span>
   </body>
 </html>
