Small bug in sprite subsystem was fixed

--- a/documentation/refrence.html
+++ b/documentation/refrence.html
@@ -359,7 +359,6 @@ C++
         unsigned int width,</span></big><big><span style="font-style: italic;">const
         unsigned int heigt</span></big><big><span style="font-style: italic;">);</span>
       – Initialize the base graphic subsystem with custom screen resolution.</big><big><span
-
         style="font-style: italic;"></span><span style="font-style: italic;"></span><br>
       <span style="font-style: italic;">bool Screen::sync();</span> – Show
       current back-buffer content on screen. Return false if a game is
@@ -439,7 +438,7 @@ C++
       <br>
       Animation subsystem let you control animation frames.<br>
       <br>
-      <span style="text-decoration: underline;">Work with advanced graphics</span><br>
+      <span style="text-decoration: underline;">Work with animation subsystem</span><br>
       <br>
       <span style="font-style: italic;">Frame</span> class provide simple access
       to animation subsystem. Don’t use it directly. Let’s look to public
@@ -1603,6 +1602,7 @@ C++
       <span style="font-style: italic;">Shape</span> is base class for <span style="font-style: italic;">Rectangle</span>
       class.<br>
       <span style="font-style: italic;">COM_Base</span> is base class for <span
+
         style="font-style: italic;">Multimedia</span> class. </big>
     <h2><a class="mozTocH2" name="mozTocId293644"></a><big>Chapter 3. Base
         graphics subsystem</big></h2>
@@ -1751,6 +1751,7 @@ Multimedia
       </big></span><span><big>1.6.8 – Game-pad support was improved.<br>
         1.6.9 –&nbsp;</big></span><span><big> 1.7 –</big></span><span><big>
         Small changes.<br>
+        1.7.1 – Small bug in sprite subsystem was fixed.<br>
       </big></span>
   </body>
 </html>
