Tile-set subsystem was improved

--- a/documentation/refrence.html
+++ b/documentation/refrence.html
@@ -328,7 +328,6 @@ C++
         subsystem</span><br>
       <br>
       Base graphics subsystem do rendering game scene. This subsystem using <a
-
         href="http://opengl.org">OPENGL</a> for render. Most modern video-card
       support hardware accelerated OPENGL. Software emulated OPENGL will
       activate if </big><big>hardware acceleration not available.</big><br>
@@ -360,7 +359,6 @@ C++
         unsigned int width,</span></big><big><span style="font-style: italic;">const
         unsigned int heigt</span></big><big><span style="font-style: italic;">);</span>
       – Initialize the base graphic subsystem with custom screen resolution.</big><big><span
-
         style="font-style: italic;"></span><span style="font-style: italic;"></span><br>
       <span style="font-style: italic;">bool Screen::sync();</span> – Show
       current back-buffer content on screen. Return false if a game is
@@ -520,7 +518,6 @@ C++
         *screen);</span>&nbsp; – Prepare for drawing.<br>
       <span style="font-style: italic;">void Background::set_target(const
         unsigned int target);</span> – Set target frame in scrolling background.<br
-
         style="font-style: italic;">
       <span style="font-style: italic;">void Background::step();</span> –
       Increase number of target frame in scrolling background. Set it to 1 if
@@ -1423,6 +1420,7 @@ C++
     <big><br>
     </big>
     <table style="text-align: left; width: 516px; height: 124px;" cellspacing="2"
+
       cellpadding="2" border="1">
       <tbody>
         <tr>
@@ -1614,7 +1612,6 @@ C++
       <span style="font-style: italic;">Shape</span> is base class for <span style="font-style: italic;">Rectangle</span>
       class.<br>
       <span style="font-style: italic;">COM_Base</span> is base class for <span
-
         style="font-style: italic;">Multimedia</span> class. </big>
     <h2><a class="mozTocH2" name="mozTocId293644"></a><big>Chapter 3. Base
         graphics subsystem</big></h2>
@@ -1777,6 +1774,10 @@ Multimedia
         1.8.7 – 1.8.8 – Image loader was improved.<br>
         1.8.9 – Small changes.<br>
         1.9 – 1.9.1 – Image loader was improved.<br>
+        1.9.2 – Picture subsystem was improved.<br>
+        1.9.3 – Small changes.<br>
+        1.9.4 – Tile-set subsystem was improved.<br>
+        1.9.5 – 1.9.7 – Small changes.<br>
       </big></span>
   </body>
 </html>
