Image loader was improved

--- a/documentation/refrence.html
+++ b/documentation/refrence.html
@@ -1648,7 +1648,8 @@ C++
       <h2><a class="mozTocH2" name="mozTocId472209"></a><big>Chapter 4. Game-pad</big></h2>
       <big><br>
         Game-pad subsystem working over <a href="https://msdn.microsoft.com/ru-ru/library/windows/desktop/dd757116%28v=vs.85%29.aspx">Joystick
-Multimedia API</a>. </big>
+Multimedia
+          API</a>. </big>
       <h2><a class="mozTocH2" name="mozTocId804583"></a><big>Chapter 5. Input</big></h2>
       <big><br>
         <span style="text-decoration: underline;">Input back-end</span><br>
@@ -1770,6 +1771,8 @@ Multimedia API</a>. </big>
         1.9.4 – Tile-set subsystem was improved.<br>
         1.9.5 – 1.9.8 – Small changes.<br>
         1.9.9 – Background subsystem was improved.<br>
+        2.0 – </big></span><span><big>2.0.3 –</big></span><span><big> Image
+        loader was improved.<br>
       </big></span>
   </body>
 </html>
