Background subsystem and sprite subsystem was improved

--- a/documentation/refrence.html
+++ b/documentation/refrence.html
@@ -533,6 +533,8 @@ C++
       – Do horizontal background mirror.<br>
       <span style="font-style: italic;">void Background::vertical_mirror();</span>
       – Do vertical background mirror.<br>
+      <span style="font-style: italic;">void Backgrround::complex_mirror();</span>
+      – Do both horizontal and vertical background mirror.<br>
     </big> <big> <span style="font-style: italic;">void
         Background::draw_background();</span> – Draw a background.<br>
       <br>
@@ -669,6 +671,8 @@ C++
       – Do horizontal sprite mirror.<br>
       <span style="font-style: italic;">void Sprite::vertical_mirror();</span> –
       Do vertical sprite mirror.<br>
+      <span style="font-style: italic;">void Sprite::complex_mirror();</span> –
+      Do both horizontal and vertical sprite mirror.<br>
     </big><big> <span style="font-style: italic;">void Sprite::draw_sprite();</span>
       – Draw a sprite.</big><br>
     <big> <span style="font-style: italic;">void Sprite::draw_sprite(const
@@ -1773,6 +1777,8 @@ Multimedia
         1.9.9 – Background subsystem was improved.<br>
         2.0 – </big></span><span><big>2.0.3 –</big></span><span><big> Image
         loader was improved.<br>
+        2.0.4 – Sprite subsystem was improved.<br>
+        2.0.5 – Background subsystem was improved.<br>
       </big></span>
   </body>
 </html>
