Text drawing subsystem was improved

--- a/documentation/refrence.html
+++ b/documentation/refrence.html
@@ -518,6 +518,7 @@ C++
         *screen);</span>&nbsp; – Prepare for drawing.<br>
       <span style="font-style: italic;">void Background::set_target(const
         unsigned int target);</span> – Set target frame in scrolling background.<br
+
         style="font-style: italic;">
       <span style="font-style: italic;">void Background::step();</span> –
       Increase number of target frame in scrolling background. Set it to 1 if
@@ -1337,6 +1338,7 @@ C++
     <big><br>
     </big>
     <table style="text-align: left; width: 613px; height: 304px;" cellspacing="2"
+
       cellpadding="2" border="1">
       <tbody>
         <tr>
@@ -1779,6 +1781,7 @@ Multimedia
         loader was improved.<br>
         2.0.4 – Sprite subsystem was improved.<br>
         2.0.5 – Background subsystem was improved.<br>
+        2.0.6 – 2.1.1 – Text drawing subsystem was improved.<br>
       </big></span>
   </body>
 </html>
