--- a/documentation/refrence.html
+++ b/documentation/refrence.html
@@ -520,7 +520,6 @@ C++
         &amp;screen);</span> – Prepare for drawing.<br>
       <span style="font-style: italic;">void Background::set_target(const
         unsigned int target);</span> – Set target frame in scrolling background.<br
-
         style="font-style: italic;">
       <span style="font-style: italic;">void Background::step();</span> –
       Increase number of target frame in scrolling background. Set it to 1 if
@@ -1786,7 +1785,7 @@ Multimedia
         2.0.5 – Background subsystem was improved.<br>
         2.0.6 – 2.1.2 – Text drawing subsystem was improved.<br>
         2.1.3 – Background subsystem was improved.<br>
-        2.1.4 – Small changes.<br>
+        2.1.4 –&nbsp; 2.1.8 – Small changes.<br>
       </big></span>
   </body>
 </html>
