Multimedia subsystem was improved

--- a/documentation/refrence.html
+++ b/documentation/refrence.html
@@ -241,8 +241,7 @@
         guide</big></h2>
     <big><br>
       Install Microsoft <a href="https://support.microsoft.com/en-us/help/2977003/the-latest-supported-visual-c-downloads">Visual
-C++
-        Redistributable Packages</a> if you game don’t run. </big>
+C++ Redistributable Packages</a> if you game don’t run. </big>
     <h2><a class="mozTocH2" name="mozTocId491993"></a><big>Chapter 6. Compilers</big></h2>
     <big><br>
       <span style="text-decoration: underline;">Supported compilers</span><br>
@@ -1656,8 +1655,7 @@ C++
       <h2><a class="mozTocH2" name="mozTocId472209"></a><big>Chapter 4. Game-pad</big></h2>
       <big><br>
         Game-pad subsystem working over <a href="https://msdn.microsoft.com/ru-ru/library/windows/desktop/dd757116%28v=vs.85%29.aspx">Joystick
-Multimedia
-          API</a>. </big>
+Multimedia API</a>. </big>
       <h2><a class="mozTocH2" name="mozTocId804583"></a><big>Chapter 5. Input</big></h2>
       <big><br>
         <span style="text-decoration: underline;">Input back-end</span><br>
@@ -1786,6 +1784,7 @@ Multimedia
         2.0.6 – 2.1.2 – Text drawing subsystem was improved.<br>
         2.1.3 – Background subsystem was improved.<br>
         2.1.4 –&nbsp; 2.1.8 – Small changes.<br>
+        2.1.9 – 2.2.6 – Multimedia subsystem was improved.<br>
       </big></span>
   </body>
 </html>
