--- a/documentation/refrence.html
+++ b/documentation/refrence.html
@@ -352,11 +352,11 @@ C++ Redistributable Packages</a> if you game don’t run. </big>
       <span style="font-style: italic;">void Screen::clear_screen();</span> –
       Clear the screen. Fill it by black color.<br>
       <span style="font-style: italic;">void Screen::initialize();</span> –
-      Initialize the base graphic subsystem with default screen resolution. </big><big><span
-        style="font-style: italic;">void Screen::initialize(const unsigned int
-        width,</span></big><big><span style="font-style: italic;">const unsigned
-        int heigt</span></big><big><span style="font-style: italic;">);</span> –
-      Initialize the base graphic subsystem with custom screen resolution.</big><big><span
+      Initialize the base graphic subsystem with default screen resolution.<br>
+    </big><big><span style="font-style: italic;">void Screen::initialize(const
+        unsigned int width,</span></big><big><span style="font-style: italic;">const
+        unsigned int heigt</span></big><big><span style="font-style: italic;">);</span>
+      – Initialize the base graphic subsystem with custom screen resolution.</big><big><span
         style="font-style: italic;"></span><span style="font-style: italic;"></span><br>
       <span style="font-style: italic;">bool Screen::sync();</span> – Show
       current back-buffer content on screen. Return false if a game is
@@ -1369,6 +1369,7 @@ C++ Redistributable Packages</a> if you game don’t run. </big>
         bellow.</big></p>
     <big> </big>
     <table style="text-align: left; width: 365px; height: 94px;" cellspacing="2"
+
       cellpadding="2" border="1">
       <tbody>
         <tr>
@@ -1637,6 +1638,7 @@ Multimedia API</a>. </big>
           predefined constants. You can see it bellow.</big></p>
       <big> </big>
       <table style="text-align: left; width: 519px; height: 94px;" cellspacing="2"
+
         cellpadding="2" border="1">
         <tbody>
           <tr>
@@ -1749,6 +1751,6 @@ Multimedia API</a>. </big>
         2.1.3 – Background subsystem was improved.<br>
         2.1.4 – 2.1.8 – Small changes.<br>
         2.1.9 – 2.2.7 – Multimedia subsystem was improved.<br>
-        2.2.8 – 2.2.9 – Small changes.</big></span>
+        2.2.8 – 2.3.1 – Small changes.</big></span>
   </body>
 </html>
