Lot of internal changes

--- a/documentation/refrence.html
+++ b/documentation/refrence.html
@@ -1369,7 +1369,6 @@ C++ Redistributable Packages</a> if you game don’t run. </big>
         bellow.</big></p>
     <big> </big>
     <table style="text-align: left; width: 365px; height: 94px;" cellspacing="2"
-
       cellpadding="2" border="1">
       <tbody>
         <tr>
@@ -1567,9 +1566,10 @@ C++ Redistributable Packages</a> if you game don’t run. </big>
       synchronization timer.<br>
       <span style="font-style: italic;">Display</span> implement display
       manager.</big><br>
-    <big> <span style="font-style: italic;">FPS</span> implement fps counter. </big>
-    <big><i>Unicode_Convertor</i> implement system code-page to UTF-16
-      convertor.</big><br>
+    <big> <span style="font-style: italic;">FPS</span> implement fps counter.<span
+        style="font-style: italic;"><br>
+      </span></big><big><i>Unicode_Convertor</i> implement system code-page to
+      UTF-16 convertor.</big><br>
     <big> <span style="font-style: italic;">WINGL</span> contain Windows
       specific OPENGL initialization code.<br>
       <span style="font-style: italic;">Render</span> implement OPENGL render.<br>
@@ -1638,7 +1638,6 @@ Multimedia API</a>. </big>
           predefined constants. You can see it bellow.</big></p>
       <big> </big>
       <table style="text-align: left; width: 519px; height: 94px;" cellspacing="2"
-
         cellpadding="2" border="1">
         <tbody>
           <tr>
@@ -1751,6 +1750,10 @@ Multimedia API</a>. </big>
         2.1.3 – Background subsystem was improved.<br>
         2.1.4 – 2.1.8 – Small changes.<br>
         2.1.9 – 2.2.7 – Multimedia subsystem was improved.<br>
-        2.2.8 – 2.3.1 – Small changes.</big></span>
+        2.2.8 – 2.3.1 – Small changes.<br>
+        2.3.2 – 2.3.3 – Base graphics subsystem was improved.<br>
+        2.3.4 – Synchronization timer was improved.<br>
+        2.3.5 – Small changes.<br>
+      </big></span>
   </body>
 </html>
