Lot of internal changes

--- a/documentation/refrence.html
+++ b/documentation/refrence.html
@@ -240,7 +240,8 @@
         guide</big></h2>
     <big><br>
       Install Microsoft <a href="https://support.microsoft.com/en-us/help/2977003/the-latest-supported-visual-c-downloads">Visual
-C++ Redistributable Packages</a> if you game don’t run. </big>
+C++
+        Redistributable Packages</a> if you game don’t run. </big>
     <h2><a class="mozTocH2" name="mozTocId491993"></a><big>Chapter 6. Compilers</big></h2>
     <big><br>
       <span style="text-decoration: underline;">Supported compilers</span><br>
@@ -527,6 +528,7 @@ C++ Redistributable Packages</a> if you game don’t run. </big>
       – Do vertical background mirror.<br>
       <span style="font-style: italic;">void Backgrround::complex_mirror();</span>
       – Do both horizontal and vertical background mirror. </big> <big> <span
+
         style="font-style: italic;">void Background::draw_background();</span> –
       Draw a background.<br>
       <br>
@@ -1536,7 +1538,9 @@ C++ Redistributable Packages</a> if you game don’t run. </big>
       work with multimedia. Let’s look on public methods.<br>
       <br>
       <span style="font-style: italic;">void Multimedia::initialize();</span> –
-      Initialize the multimedia subsystem.<br>
+      Initialize the subsystem.<br>
+      <span style="font-style: italic;">void Multimedia::initialize(const char
+        *target);</span> – Initialize the subsystem and load a multimedia file.<br>
       <span style="font-style: italic;">void Multimedia::load(const char
         *target);</span> – Load a multimedia file.<br>
       <span style="font-style: italic;">void Multimedia::play();</span> – Play a
@@ -1753,7 +1757,9 @@ Multimedia API</a>. </big>
         2.2.8 – 2.3.1 – Small changes.<br>
         2.3.2 – 2.3.3 – Base graphics subsystem was improved.<br>
         2.3.4 – Synchronization timer was improved.<br>
-        2.3.5 – Small changes.<br>
+        2.3.5 – 2.3.6 – Small changes.<br>
+        2.3.7 – Multimedia subsystem was improved.<br>
+        2.3.8 – Keyboard input was improved.<br>
       </big></span>
   </body>
 </html>
