--- a/documentation/refrence.html
+++ b/documentation/refrence.html
@@ -240,8 +240,7 @@
         guide</big></h2>
     <big><br>
       Install Microsoft <a href="https://support.microsoft.com/en-us/help/2977003/the-latest-supported-visual-c-downloads">Visual
-C++
-        Redistributable Packages</a> if you game don’t run. </big>
+C++ Redistributable Packages</a> if you game don’t run. </big>
     <h2><a class="mozTocH2" name="mozTocId491993"></a><big>Chapter 6. Compilers</big></h2>
     <big><br>
       <span style="text-decoration: underline;">Supported compilers</span><br>
@@ -1760,6 +1759,7 @@ Multimedia API</a>. </big>
         2.3.5 – 2.3.6 – Small changes.<br>
         2.3.7 – Multimedia subsystem was improved.<br>
         2.3.8 – Keyboard input was improved.<br>
+        2.3.9 – Small changes.<br>
       </big></span>
   </body>
 </html>
